--- a/package.json
+++ b/package.json
@@ -126,14 +126,15 @@
     "@semantic-release/git": "^7.0.7",
     "@semantic-release/npm": "^5.1.3",
     "@semantic-release/release-notes-generator": "^7.1.4",
-    "@storybook/addon-a11y": "^5.1.7",
-    "@storybook/addon-actions": "^5.1.7",
-    "@storybook/addon-info": "5.2.0-alpha.44",
-    "@storybook/addon-knobs": "^5.1.7",
-    "@storybook/addon-links": "^5.1.7",
-    "@storybook/addon-storyshots": "^5.1.7",
-    "@storybook/addons": "^5.1.7",
-    "@storybook/react": "^5.1.7",
+    "@storybook/addon-a11y": "^5.2.1",
+    "@storybook/addon-actions": "^5.2.1",
+    "@storybook/addon-docs": "^5.2.1",
+    "@storybook/addon-info": "5.2.1",
+    "@storybook/addon-knobs": "^5.2.1",
+    "@storybook/addon-links": "^5.2.1",
+    "@storybook/addon-storyshots": "^5.2.1",
+    "@storybook/addons": "^5.2.1",
+    "@storybook/react": "^5.2.1",
     "autoprefixer": "^9.4.4",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
@@ -190,7 +191,7 @@
     "sass-loader": "^7.1.0",
     "semantic-release": "^16.0.0-beta.19",
     "storybook-addon-rtl": "^0.2.2",
-    "storybook-readme": "^5.0.5",
+    "storybook-readme": "^5.0.8",
     "style-loader": "^0.23.1",
     "stylelint": "^10.1.0",
     "stylelint-config-recommended-scss": "^3.3.0",
